// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormConfirmation /> should list passed fields 1`] = `
<div
  className="form-section"
>
  <h2
    className="form-header"
  >
    Review
  </h2>
  <div
    className="form-contents"
  >
    <div
      key="name"
    >
      name
      : 
      Tester
    </div>
    <div
      key="age"
    >
      age
      : 
      24
    </div>
    <div
      key="weight"
    >
      weight
      : 
      165
    </div>
  </div>
  <div
    className="form-buttons flex-centered"
  >
    <button
      className="form-input__button-go-back"
      id="prev"
      type="button"
    >
      Go Back
    </button>
    <button
      className="form-input__button-save-continue"
      id="submit"
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`<FormConfirmation /> should render 1`] = `
<div
  className="form-section"
>
  <h2
    className="form-header"
  >
    Review
  </h2>
  <div
    className="form-contents"
  />
  <div
    className="form-buttons flex-centered"
  >
    <button
      className="form-input__button-go-back"
      id="prev"
      type="button"
    >
      Go Back
    </button>
    <button
      className="form-input__button-save-continue"
      id="submit"
      type="submit"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`<FormConfirmation /> should render submitText 1`] = `
<div
  className="form-section"
>
  <h2
    className="form-header"
  >
    Review
  </h2>
  <div
    className="form-contents"
  />
  <div
    className="form-buttons flex-centered"
  >
    <button
      className="form-input__button-go-back"
      id="prev"
      type="button"
    >
      Go Back
    </button>
    <button
      className="form-input__button-save-continue"
      id="submit"
      type="submit"
    >
      Get Started
    </button>
  </div>
</div>
`;

exports[`<MultistepForm /> should render 1`] = `<Component />`;
